@@ -1,7 +1,9 @@
-# $Id: time_nok.t,v 1.2 2007-03-08 19:40:24 jonasbn Exp $
+# $Id: time_nok.t,v 1.3 2007-03-08 21:40:40 jonasbn Exp $
 
 use strict;
-use Test::More tests => 3;
+use Test::More tests => 5;
+
+use Test::Exception;
 
 BEGIN { use_ok('Test::Timer'); }
 
@@ -10,3 +12,7 @@ time_nok( sub { sleep(2); }, 1, 'Failing test' );
 $Test::Timer::alert = 6;
 
 time_nok( sub { sleep(4); }, [ 0, 2 ], 'Failing test' );
+
+time_nok( sub { sleep(4); }, [ 2 ], 'Failing test' );
+
+dies_ok { time_nok(sub { sleep(1); }, [], ); } 'Dying test';
